changed the name of the archery

--- a/fun.html
+++ b/fun.html
@@ -22,7 +22,7 @@
 </header>
    <h1> Fun for everyone</h1>
   <article class="articlehp">
-   <p class="paddingfun">Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p> 
+   <p class="paddingfun">Straight to the Point admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p> 
 <img class="articleimg" src="images/arrow.png" alt="arrow and target">
 </article> 
 <footer>
