--- a/fun.html
+++ b/fun.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
 <head>
-    <title> Homepage </title>
+    <title> Straight to the point</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://use.fontawesome.com/ac62c0e0c8.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind+Guntur" rel="stylesheet">
 </head>
+<body>
 <header>
-<img src="images/class1finalwithlogo.jpg">
+<img class="bannerimg" src="images/class1finalwithlogo.jpg" alt="kids competing">
 <nav class="mainnav">
     <ul>
-      <p> <a href="index.html"> ABOUT </a> </p>
+     <li> <a href="homepage.html"> HOME </a> </li>
+       <li> <a href="index.html"> ABOUT </a> </li>
       <li> <a href="ourteam.html"> OUR TEAM </a> </li>
       <li> <a href="classesandprices.html"> CLASSES AND PRICES</a> </li>
       <li> <a href="privatelessons.html"> PRIVATE LESSONS</a></li>
@@ -28,11 +29,12 @@
 <footer>
  <div class="row">
   <div class="column">
+     <p> <a href="homepage.html"> HOME </a> </p>
     <p> <a href="index.html"> ABOUT </a> </p>
     <p><a href="ourteam.html"> OUR TEAM </a> </p>
       <p> <a href="classesandprices.html"> CLASSES AND PRICES</a> </p>
       <p> <a href="privatelessons.html"> PRIVATE LESSONS</a></p>
-      <p> <a href="privatelessons.html"> FUN FOR EVERYONE</a></p> 
+      <p> <a href="fun.html"> FUN FOR EVERYONE</a></p>
   </div>
   <div class="column">
   <h2>Follow us</h2>
