--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
 <head>
     <title> Straight to the point </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://use.fontawesome.com/ac62c0e0c8.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind+Guntur" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<body>
 <header>
-<img src="images/class1finalwithlogo.jpg">
+<img class="bannerimg" src="images/class1finalwithlogo.jpg">
 <nav class="mainnav">
     <ul>
+      <li> <a href="homepage.html"> HOME </a></li>
       <li> <a href="about.html"> ABOUT </a> <li>
       <li> <a href="ourteam.html"> OUR TEAM </a> </li>
       <li> <a href="classesandprices.html"> CLASSES AND PRICES</a> </li>
@@ -38,11 +40,12 @@
 <footer>
  <div class="row">
   <div class="column">
+    <p> <a href="hompepage.html"> HOME </a> </p>
     <p> <a href="index.html"> ABOUT </a> </p>
     <p><a href="ourteam.html"> OUR TEAM </a> </p>
       <p> <a href="classesandprices.html"> CLASSES AND PRICES</a> </p>
       <p> <a href="privatelessons.html"> PRIVATE LESSONS</a></p>
-      <p> <a href="privatelessons.html"> FUN FOR EVERYONE</a></p>
+      <p> <a href="fun.html"> FUN FOR EVERYONE</a></p>
     
   </div>
   <div class="column">
