--- a/classesandprices.html
+++ b/classesandprices.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
 <head>
     <title> Straight to the point </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://use.fontawesome.com/ac62c0e0c8.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind+Guntur" rel="stylesheet">
+   <link rel="stylesheet" href="styles/responsivegrid.css">
 </head>
+<body>
 <header>
-<img src="images/class1finalwithlogo.jpg">
+<img class="bannerimg"  src="images/class1finalwithlogo.jpg">
 <nav class="mainnav">
     <ul>
-      <p> <a href="index.html"> ABOUT </a> </p>
+      <li> <a href="homepage.html"> HOME </a></li>
+      <li> <a href="about.html"> ABOUT </a> <li>
       <li> <a href="ourteam.html"> OUR TEAM </a> </li>
       <li> <a href="classesandprices.html"> CLASSES AND PRICES</a> </li>
       <li> <a href="privatelessons.html"> PRIVATE LESSONS</a></li>
       <li> <a href="fun.html"> FUN FOR EVERYONE </a></li>
     </ul>
     </nav>
-</header>			
-<h2> Classes and Prices </h2>
-<article>
-  <section>
-  
-  </section>
-  
-  
-  
-  
-
-  
-  
-  
-  
-  
-</article>
+</header>
+<h1 class="h1classes"> Classes and Prices </h1>
+<div class="section group">
+	<div class="col span_1_of_3">
+      <h5> A101 Basic Archery</h5>
+	<p class="pclassespricess">A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.Equipment will be provided with exception of safety kit.</p>
+      <p></p>
+      <p class="pclassespricess2"><span style="color:#F7481B"> Cost: </span> $120/month</p>
+      <p class="pclassespricess2"><span style="color:#F7481B">Schedule:</span> Mondays and Wednesdays, 4-5pm </p>
+	 <p class="pclassespricess2"><span style="color:#F7481B">Prerequisite:</span>  Interest in learning about the sport of archery. Minimum age 8 years old or 7 w/ pre-evaluation.</p>
+	</div>
+	<div class="col span_1_of_3">
+	 <h5> A102 Intermediate Archery </h5>
+      <p class="pclassespricess">A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.Equipment will be provided with exception of safety kit.</p>
+          <p></p>
+      <p class="pclassespricess2"><span style="color:#F7481B">Cost:</span> $120/month</p>
+		<p class="pclassespricess2"> <span style="color:#F7481B">Schedule:</span> Tuesdays and Thursdays, 4-5pm</p>
+      <p class="pclassespricess2"><span style="color:#F7481B">Prerequisite: </span>A101 or recommendation from private lesson instructor. Minimum age  7 years old.</p>
+      <img class="articleimg" src="images/arrow.png" alt="arrow and target">
+	</div>
+	<div class="col span_1_of_3">
+	<h5>A103 Advanced Archery</h5>
+	<p class="pclassespricess">After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.Equipment will be provided with exception of safety kit. </p>
+      <p></p>
+      <p class="pclassespricess2"><span style="color:#F7481B">Cost:</span> $120/month</p>
+      <p class="pclassespricess2"><span style="color:#F7481B">Schedule:</span> Tuesdays and Thursdays, 5-6pm</p> 
+      <p class="pclassespricess2"><span style="color:#F7481B">Prerequisite:</span> A101/A102 or equivalent. Minimum age  7 years old.</p>
+	</div>
+</div>
 <footer>
  <div class="row">
   <div class="column">
+     <p> <a href="homepage.html"> HOME </a> </p>
+    <p> <a href="index.html"> ABOUT </a> </p>
     <p><a href="ourteam.html"> OUR TEAM </a> </p>
       <p> <a href="classesandprices.html"> CLASSES AND PRICES</a> </p>
       <p> <a href="privatelessons.html"> PRIVATE LESSONS</a></p>
-      <p> <a href="privatelessons.html"> FUN FOR EVERYONE</a></p>
+      <p> <a href="fun.html"> FUN FOR EVERYONE</a></p>
     
   </div>
   <div class="column">
