--- a/privatelessons.html
+++ b/privatelessons.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
 <head>
     <title> Straight to the point </title>
     <meta charset="utf-8">
@@ -8,11 +7,13 @@
     <script src="https://use.fontawesome.com/ac62c0e0c8.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind+Guntur" rel="stylesheet">
 </head>
+<body>
 <header>
-<img src="images/class1finalwithlogo.jpg">
+<img class="bannerimg" src="images/class1finalwithlogo.jpg">
 <nav class="mainnav">
     <ul>
-      <li> <a href="index.html"> ABOUT </a> </li>
+      <li> <a href="homepage.html"> HOME </a> </li>
+       <li> <a href="index.html"> ABOUT </a> </li>
       <li> <a href="ourteam.html"> OUR TEAM </a> </li>
       <li> <a href="classesandprices.html"> CLASSES AND PRICES</a> </li>
       <li> <a href="privatelessons.html"> PRIVATE LESSONS</a></li>
@@ -39,11 +40,12 @@
 <footer>
  <div class="row">
   <div class="column">
+      <p> <a href="homepage.html"> HOME </a> </p>
     <p> <a href="index.html"> ABOUT </a> </p>
     <p><a href="ourteam.html"> OUR TEAM </a> </p>
       <p> <a href="classesandprices.html"> CLASSES AND PRICES</a> </p>
       <p> <a href="privatelessons.html"> PRIVATE LESSONS</a></p>
-      <p> <a href="privatelessons.html"> FUN FOR EVERYONE</a></p>
+      <p> <a href="fun.html"> FUN FOR EVERYONE</a></p>
     
   </div>
   <div class="column">
